--- a/WebApplication1/ClientApp/package.json
+++ b/WebApplication1/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "admin-lte": "^2.4.18",
     "bootstrap": "^3.4.1",
+    "jquery": "^3.4.1",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
